# SBI

./: Brainfuck.h  CMakeLists.txt  CommandHandler.h  Compiler.h  README.md  main.cpp  main.s  t.txt
brainfuck/: Brainfuck.h
brainfuck/interpreter/: interpreter.h
brainfuck/translator/: translator.h
src/brainfuck/interpreter/: interpreter.h
src/brainfuck/translator/: translator.h
src/commands/: CommandHandler.h
